--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     </div>
 
 
-    <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+    <div class="tab-pane bg-light" id="profile" role="tabpanel" aria-labelledby="profile-tab">
       <div class="width-100% m-auto">
-        <div>
+        <div class="container">
             <div>
                 <h2>My First Photo</h2>
                 <span>12/14</span>
