--- a/index.html
+++ b/index.html
@@ -69,14 +69,15 @@
   </nav>
 
 
-  <ul class="nav nav-pills flex-column flex-sm-row d-flex justify-content-center" id="myTab" role="tablist"style="margin-bottom: 5px">
+  <ul class="nav nav-pills flex-column flex-sm-row d-flex justify-content-center" id="myTab" role="tablist"
+    style="margin-bottom: 5px">
     <li class="nav-item" role="presentation">
-      <button class="active btn btn-secondary " id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab"
-        aria-controls="home" aria-selected="true"><i class="fa-solid fa-grip"></i></button>
+      <button class="active btn btn-secondary " id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+        role="tab" aria-controls="home" aria-selected="true"><i class="fa-solid fa-grip"></i></button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="btn btn-secondary" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab"
-        aria-controls="profile" aria-selected="false"><i class="fa-solid fa-square"></i></button>
+      <button class="btn btn-secondary" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+        role="tab" aria-controls="profile" aria-selected="false"><i class="fa-solid fa-square"></i></button>
     </li>
   </ul>
 
@@ -119,26 +120,29 @@
 
 
     <div class="tab-pane bg-light" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-      <div class="width-100% m-auto">
-        <div class="container">
-            <div>
-                <h2>My First Photo</h2>
-                <span>12/14</span>
-            </div>
-            <div>
-              <img src="https://picsum.photos/seed/picsum/420/300" alt="">
-            </div>
-            <div>
-              <span>23 Likes</span>
-                <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
-                    learning
-                    to
-                    code with #Breathecode</p>
-            </div>
-            <div>
-              <span><i class="fa-regular fa-heart"></i></i>Comment...</span> 
-            </div>
+      <div class="width-100% m-auto p-4">
+        <div class="container p-0 bg-body text-dark rounded">
+          <div class="d-flex justify-content-between">
+            <h5>My first photo</h5>
+            <span>12/14</span>
+          </div>
+          <div>
+            <img class="w-100 " src="https://picsum.photos/seed/picsum/420/300" alt="">
+          </div>
+          <div class="mt-2">
+            <span><strong>23 Likes</strong></span>
+            <div class="mt-2">
+            <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
+              learning
+              to
+              code with #BreatheCode</p>
+              </div>
+          </div>
+          <div class="d-flex justify-content-between">
+            <span><i class="fa-regular fa-heart"></i></i>Comment...</span><i class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
         </div>
+      </div>
     </div>
 
 
@@ -152,7 +156,7 @@
 
 
 
-    </div>
+
   </div>
 
 
