--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                   <textarea class="form-control" id="message-text"></textarea>
                 </div>
                 <div class="mb-3">
-                  <button type="button" class="btn btn-primary"><i class="fa-solid fa-camera"></i></button>
-                  <button type="button" class="btn btn-primary"><i class="fa-solid fa-location-dot"></i></button>
+                  <button type="button" class="btn btn-light"><i class="fa-solid fa-camera"></i></button>
+                  <button type="button" class="btn btn-light"><i class="fa-solid fa-location-dot"></i></button>
                 </div>
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-primary">Publish</button>
+              <button type="button" class="btn btn-light" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-success">Publish</button>
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
   <ul class="nav nav-pills flex-column flex-sm-row d-flex justify-content-center" id="myTab" role="tablist"
     style="margin-bottom: 5px">
     <li class="nav-item" role="presentation">
-      <button class="active btn btn-secondary " id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+      <button class="active btn btn-light " id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
         role="tab" aria-controls="home" aria-selected="true"><i class="fa-solid fa-grip"></i></button>
     </li>
     <li class="nav-item" role="presentation">
@@ -82,37 +82,25 @@
   </ul>
 
 
-  <div class="tab-content mw-100 m-auto">
+  <div class="tab-content">
     <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab ">
 
-      <div class="container m-auto mw-100">
-        <div class="row row-cols-3 justify-content-between">
-          <div class="col col-lg-4 p-0" style="margin-bottom: 2px;">
-            <img src="https://picsum.photos/seed/picsum/420/300" alt="">
+      <div class="d-flex justify-content-center p-2 mx-5 px-5">
+        <div class="row">
+          <div class="mb-1 mx-5 px-5">
+            <img src="https://picsum.photos/seed/picsum/700/500" alt="">
+            <img src="https://picsum.photos/700/500?grayscale" alt="">
+            <img src="https://picsum.photos/700/500" alt="">
           </div>
-          <div class="col col-lg-4 p-0">
-            <img src="https://picsum.photos/420/300?grayscale" alt="">
+          <div class="mb-1 mx-5 px-5">
+            <img src="https://picsum.photos/700/500?grayscale&blur=2" alt="">
+            <img src="https://picsum.photos/700/500" alt="">
+            <img src="https://picsum.photos/700/500?grayscale" alt="">
           </div>
-          <div class="col col-lg-4 p-0">
-            <img src="https://picsum.photos/420/300" alt="">
-          </div>
-          <div class="col col-lg-4 p-0" style="margin-bottom: 2px;">
-            <img src="https://picsum.photos/420/300?grayscale&blur=2" alt="">
-          </div>
-          <div class="col col-lg-4 p-0">
-            <img src="https://picsum.photos/420/300" alt="">
-          </div>
-          <div class="col col-lg-4 p-0">
-            <img src="https://picsum.photos/420/300?grayscale" alt="">
-          </div>
-          <div class="col col-lg-4 p-0">
-            <img src="https://picsum.photos/seed/picsum/420/300" alt="">
-          </div>
-          <div class="col col-lg-4 p-0">
-            <img src="https://picsum.photos/420/300" alt="">
-          </div>
-          <div class="col col-lg-4 p-0">
-            <img src="https://picsum.photos/420/300" alt="">
+          <div class="mb-1 mx-5 px-5">
+            <img src="https://picsum.photos/seed/picsum/700/500" alt="">
+            <img src="https://picsum.photos/700/500" alt="">
+            <img src="https://picsum.photos/700/500" alt="">
           </div>
         </div>
       </div>
@@ -132,11 +120,11 @@
           <div class="mt-2">
             <span><strong>23 Likes</strong></span>
             <div class="mt-2">
-            <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
-              learning
-              to
-              code with #BreatheCode</p>
-              </div>
+              <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
+                learning
+                to
+                code with #BreatheCode</p>
+            </div>
           </div>
           <div class="d-flex justify-content-between">
             <span><i class="fa-regular fa-heart"></i></i>Comment...</span><i class="fa-solid fa-ellipsis-vertical"></i>
