--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
 
 
     <div class="tab-pane bg-light" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-      <div class="width-100% m-auto p-4">
-        <div class="container p-0 bg-body text-dark rounded">
-          <div class="d-flex justify-content-between">
+      <div class="p-4 m-auto w-50">
+        <div class="bg-body text-dark rounded">
+          <div class="d-flex justify-content-between px-3 pt-2">
             <h5>My first photo</h5>
             <span>12/14</span>
           </div>
           <div>
-            <img class="w-100 " src="https://picsum.photos/seed/picsum/420/300" alt="">
+            <img class="w-100" src="https://picsum.photos/seed/picsum/420/300" alt="">
           </div>
-          <div class="mt-2">
+          <div class="mt-2 px-3">
             <span><strong>23 Likes</strong></span>
             <div class="mt-2">
               <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
@@ -126,8 +126,114 @@
                 code with #BreatheCode</p>
             </div>
           </div>
-          <div class="d-flex justify-content-between">
-            <span><i class="fa-regular fa-heart"></i></i>Comment...</span><i class="fa-solid fa-ellipsis-vertical"></i>
+          <div class="d-flex justify-content-between px-4 pb-2">
+            <span><i
+                class="fa-regular fa-heart"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comment...</span><i
+              class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-4 m-auto w-50">
+        <div class="bg-body text-dark rounded">
+          <div class="d-flex justify-content-between px-3 pt-2">
+            <h5>My first photo</h5>
+            <span>12/14</span>
+          </div>
+          <div>
+            <img class="w-100" src="https://picsum.photos/420/300?grayscale" alt="">
+          </div>
+          <div class="mt-2 px-3">
+            <span><strong>23 Likes</strong></span>
+            <div class="mt-2">
+              <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
+                learning
+                to
+                code with #BreatheCode</p>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between px-4 pb-2">
+            <span><i
+                class="fa-regular fa-heart"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comment...</span><i
+              class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-4 m-auto w-50">
+        <div class="bg-body text-dark rounded">
+          <div class="d-flex justify-content-between px-3 pt-2">
+            <h5>My first photo</h5>
+            <span>12/14</span>
+          </div>
+          <div>
+            <img class="w-100" src="https://picsum.photos/420/300" alt="">
+          </div>
+          <div class="mt-2 px-3">
+            <span><strong>23 Likes</strong></span>
+            <div class="mt-2">
+              <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
+                learning
+                to
+                code with #BreatheCode</p>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between px-4 pb-2">
+            <span><i
+                class="fa-regular fa-heart"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comment...</span><i
+              class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-4 m-auto w-50">
+        <div class="bg-body text-dark rounded">
+          <div class="d-flex justify-content-between px-3 pt-2">
+            <h5>My first photo</h5>
+            <span>12/14</span>
+          </div>
+          <div>
+            <img class="w-100" src="https://picsum.photos/seed/picsum/420/300" alt="">
+          </div>
+          <div class="mt-2 px-3">
+            <span><strong>23 Likes</strong></span>
+            <div class="mt-2">
+              <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
+                learning
+                to
+                code with #BreatheCode</p>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between px-4 pb-2">
+            <span><i
+                class="fa-regular fa-heart"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comment...</span><i
+              class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-4 m-auto w-50">
+        <div class="bg-body text-dark rounded">
+          <div class="d-flex justify-content-between px-3 pt-2">
+            <h5>My first photo</h5>
+            <span>12/14</span>
+          </div>
+          <div>
+            <img class="w-100" src="https://picsum.photos/420/300?grayscale&blur=2" alt="">
+          </div>
+          <div class="mt-2 px-3">
+            <span><strong>23 Likes</strong></span>
+            <div class="mt-2">
+              <p>This is my first photo of the feed. This is a multi line comment for testing purposes. I am
+                learning
+                to
+                code with #BreatheCode</p>
+            </div>
+          </div>
+          <div class="d-flex justify-content-between px-4 pb-2">
+            <span><i
+                class="fa-regular fa-heart"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Comment...</span><i
+              class="fa-solid fa-ellipsis-vertical"></i>
           </div>
         </div>
       </div>
